kubernetes/master-configs/taskserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f-taskserver-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f-taskserver-master
  template:
    metadata:
      labels:
        app: f-taskserver-master
    spec:
      imagePullSecrets:
      - name: f-docker-secret
      containers:
      - name: f-taskserver-master
        image:  xieyubo/private:f-taskserver-master
