kubernetes/master-configs/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f-webserver-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f-webserver-master
  template:
    metadata:
      labels:
        app: f-webserver-master
    spec:
      imagePullSecrets:
      - name: f-docker-secret
      containers:
      - name: f-webserver-master
        image: xieyubo/private:f-webserver-master
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: f-webserver-master
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: f-webserver-master
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f-webserver-master
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - api.fmaster.xyb.name
    secretName: f-webserver-master-tls
  rules:
  - host: api.fmaster.xyb.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f-webserver-master
            port:
              number: 80
